hard-gists/3168336/run.log
=== Docker Run Log for 3168336 ===
Started at: Mi 29. Okt 13:43:13 CET 2025

[2025-10-29 13:43:14] START: Running container for 3168336
[2025-10-29 13:43:14] SUCCESS: Container dc658a72004b96b80ddad5849222d2bf3c354e887d199b64c7b7747dd060639a started for 3168336
=== Container logs for 3168336 ===
  File "/snippet.py", line 60
    print "Usage: %s hostname.local [hostname2.local] [hostname3.local]" % script_name
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3168336 ===
[2025-10-29 13:43:16] INFO: Container dc658a72004b96b80ddad5849222d2bf3c354e887d199b64c7b7747dd060639a has stopped
